--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/entity": "^6.1.2",
+    "@ngrx/router-store": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -40,6 +44,7 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@ngrx/store-devtools": "^6.1.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -53,6 +58,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^8.0.4",
+    "ngrx-store-freeze": "^0.2.4",
     "prettier": "^1.14.3",
     "pretty-quick": "^1.8.0",
     "protractor": "~5.4.0",
