--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@ngrx/router-store": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "core-js": "^2.5.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
