--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngrx/router-store": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "core-js": "^2.5.4",
+    "ngx-socket-io": "^2.0.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
