--- a/angular.json
+++ b/angular.json
@@ -9,8 +9,12 @@
       "projectType": "application",
       "prefix": "app",
       "schematics": {
-        "@schematics/angular:component": {
-          "styleext": "scss"
+        "@ngrx/schematics:component": {
+          "styleext": "scss",
+          "spec": false
+        },
+        "@ngrx/schematics:service": {
+          "spec": false
         }
       },
       "architect": {
