--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
