--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
+    "ts-guid": "^1.0.11",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
