--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "cypress open"
   },
   "private": true,
   "husky": {
@@ -55,6 +55,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "cypress": "^3.1.1",
     "husky": "^1.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -64,6 +65,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^8.0.4",
+    "mock-socket-with-protocol": "^7.1.1",
     "ngrx-store-freeze": "^0.2.4",
     "prettier": "^1.14.3",
     "pretty-quick": "^1.8.0",
