chore: setup up jest with schematic

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "husky": {
@@ -32,6 +33,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@balticcode/ngx-hotkeys": "^2.1.3",
+    "@briebug/jest-schematic": "^1.5.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/entity": "^6.1.2",
     "@ngrx/router-store": "^6.1.2",
@@ -60,11 +62,8 @@
     "husky": "^1.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jest": "23.6.0",
+    "jest-preset-angular": "6.0.1",
     "lint-staged": "^8.0.4",
     "mock-socket-with-protocol": "^7.1.1",
     "ngrx-store-freeze": "^0.2.4",
