--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "@netbasal/spectator": "^2.1.1",
     "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^23.3.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "cypress": "^3.1.1",
