--- a/package.json
+++ b/package.json
@@ -51,11 +51,15 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@kentan-official/core": "^2.0.8",
+    "@kentan-official/schematics": "^2.0.7",
     "@netbasal/spectator": "^2.1.1",
     "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
+    "@types/chance": "^1.0.1",
     "@types/jest": "^23.3.9",
     "@types/node": "~8.9.4",
+    "chance": "^1.0.16",
     "codelyzer": "~4.5.0",
     "cypress": "^3.1.1",
     "husky": "^1.1.3",
