--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "@chat": ["./src/app/chat/store/reducers"],
+      "@root": ["./src/app/store/reducers"]
+    }
   }
 }
