--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "husky": {
@@ -50,6 +51,7 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@briebug/jest-schematic": "^1.5.0",
     "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
     "@types/jasmine": "~2.8.8",
@@ -59,11 +61,8 @@
     "husky": "^1.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jest": "23.6.0",
+    "jest-preset-angular": "latest",
     "lint-staged": "^8.0.4",
     "ngrx-store-freeze": "^0.2.4",
     "prettier": "^1.14.3",
