--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@cypress/webpack-preprocessor": "^4.0.2",
     "@kentan-official/core": "^2.0.8",
     "@kentan-official/schematics": "^2.0.7",
     "@netbasal/spectator": "^2.1.1",
@@ -72,6 +73,7 @@
     "ngrx-store-freeze": "^0.2.4",
     "prettier": "^1.14.3",
     "pretty-quick": "^1.8.0",
+    "ts-loader": "^5.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
