--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "@briebug/jest-schematic": "^1.5.0",
     "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^23.3.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "husky": "^1.1.3",
@@ -65,7 +64,7 @@
     "jest-preset-angular": "latest",
     "lint-staged": "^8.0.4",
     "ngrx-store-freeze": "^0.2.4",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
