--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "@kentan-official/schematics": "^2.0.7",
     "@ngrx/schematics": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
+    "@types/chance": "^1.0.1",
     "@types/jest": "^23.3.9",
     "@types/node": "~8.9.4",
+    "chance": "^1.0.16",
     "codelyzer": "~4.5.0",
     "husky": "^1.1.3",
     "jasmine-core": "~2.99.1",
