--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "protractor": "~5.4.0",
+    "rxjs-marbles": "^4.3.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
