--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
+    "allowJs": true,
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
