--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "jest",
     "lint": "ng lint",
+    "e2e:ci": "cypress run",
     "e2e": "cypress open",
     "test:watch": "jest --watch"
   },
