--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "jest",
     "lint": "ng lint",
+    "lint:report": "node ./tools/tslint-report.js",
     "e2e:ci": "cypress run",
     "e2e": "cypress open",
     "test:watch": "jest --watch"
@@ -77,6 +78,7 @@
     "ts-loader": "^5.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-html-report": "^2.0.2",
     "typescript": "~3.1.1"
   }
 }
